# minh-kim-be

./: .cursorrules  .dockerignore  .env.example  AUTHENTICATION_GUIDE.md  Authentication.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  test.txt
.cursor/rules/: project.mdc
.github/workflows/: google-cloudrun-source.yml
need-migrated/: google_vertex.py  neo4j-storage.ts
src/: main.rs
src/controllers/: ai_controller.rs  auth_controller.rs  canvas_controller.rs  email_controller.rs  mod.rs  node_controller.rs
src/dao/: canvas_dao.rs  canvas_dao_trait.rs  mod.rs  node_dao.rs  node_dao_trait.rs
src/database/: mod.rs  neo4j.rs
src/middleware/: auth_middleware.rs  mod.rs
src/models/: canvas.rs  common.rs  mod.rs  node.rs
src/services/: agents_service.rs  ai_service.rs  ai_service_trait.rs  auth_service.rs  auth_service_trait.rs  canvas_service.rs  canvas_service_trait.rs  dummy_email_service.rs  email_service.rs  email_service_trait.rs  internet_search_trait.rs  jwt_weviate_auth_service.rs  mod.rs  node_service.rs  node_service_trait.rs  serper_search_service.rs  smtp_email_service.rs  supabase_auth_service.rs  tavily_search_service.rs  tokio_vertex_ai_service.rs  vertex_ai_service.rs  vertex_ai_service_trait.rs  weaviate_client.rs
