[package]
name = "minh-kim-be"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"


[dependencies]
actix-web = "4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
neo4rs = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"