[package]
name = "minh-kim-be"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"


[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
neo4rs = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
google-cloud-aiplatform-v1 = "0.4.3"
